add clear history function and update readme file

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             <input class="input is-medium is-info" onkeyup="getMovieInfo(document.getElementById('qurybox').value)"
                 id="qurybox" placeholder="Search for a Movie Name" autofocus="false" />
             <button class="btn">Save</button>
+            <button id='clear' class="clearBtn">Clear</button>
 
             <ul class="save-list"></ul>
         </div>
